--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@tippyjs/react": "^4.2.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
+    "react-time": "^4.3.0",
     "react-tooltip": "^5.20.0",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0"
