--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
-    "react-time": "^4.3.0",
-    "react-tooltip": "^5.20.0",
+    "recharts": "^2.7.2",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0"
   },
@@ -30,6 +29,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.5.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
